src/expr/src/scalar/snapshots/mz_expr__scalar__func__decode.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc()]\nfn decode(string: &str, format: &str) -> Result<ByteString, EvalError> {\n    let format = encoding::lookup_format(format)?;\n    let out = format.decode(string)?;\n    if out.len() > MAX_STRING_FUNC_RESULT_BYTES {\n        Err(EvalError::LengthTooLarge)\n    } else {\n        Ok(out.into())\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Decode;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for Decode {
    type Input1 = &'a str;
    type Input2 = &'a str;
    type Output = Result<ByteString, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        decode(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
}
impl std::fmt::Display for Decode {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(decode))
    }
}
fn decode(string: &str, format: &str) -> Result<ByteString, EvalError> {
    let format = encoding::lookup_format(format)?;
    let out = format.decode(string)?;
    if out.len() > MAX_STRING_FUNC_RESULT_BYTES {
        Err(EvalError::LengthTooLarge)
    } else {
        Ok(out.into())
    }
}
