src/expr/src/scalar/snapshots/mz_expr__scalar__func__digest_bytes.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"digest\")]\nfn digest_bytes(to_digest: &ByteStr, b: &str) -> Result<ByteString, EvalError> {\n    digest_inner(&*to_digest, b)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct DigestBytes;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for DigestBytes {
    type Input1 = &'a ByteStr;
    type Input2 = &'a str;
    type Output = Result<ByteString, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        digest_bytes(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
}
impl std::fmt::Display for DigestBytes {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("digest")
    }
}
fn digest_bytes(to_digest: &ByteStr, b: &str) -> Result<ByteString, EvalError> {
    digest_inner(&*to_digest, b)
}
